# lexy

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
bazel/: copts.bzl
examples/: BUILD.bazel  MODULE.bazel
tests/: BUILD.bazel  MODULE.bazel
tests/lexy/: BUILD.bazel
