load("@rules_cc//cc:defs.bzl", "cc_test")
load("@lexy//bazel:copts.bzl", "LEXY_COPTS")

# buildifier: keep sorted
_TESTS = [
    "callback",
    "code_point",
    "encoding",
    "error",
    "grammar",
    "input_location",
    "lexeme",
    "parse_tree",
    "token",
    "visualize",
]

[cc_test(
    name = test,
    srcs = ["{}.cpp".format(test)],
    deps = ["//:doctest_main"],
    copts = LEXY_COPTS,
) for test in _TESTS]
